# mini_sobjectizer

./: .gitignore  CLAUDE.md  CLEANUP_SUMMARY.md  CMakeLists.txt  README.md
.claude/: settings.local.json
archive/: README.md
archive/legacy/: debug_utils.h  mini_sobjectizer_v2.cpp  mini_sobjectizer_v2.h  mini_sobjectizer_v3.cpp  mini_sobjectizer_v3.h  simple_sobjectizer.cpp  simple_sobjectizer.h  simple_test.cpp  system_agents.cpp  system_agents.h
archive/old_examples/: enhanced_example.cpp  phase2_simple_example.cpp  simple_philosophy_example.cpp
cmake/: mini_sobjectizer_config.cmake.in
docs/: API_REFERENCE.md  ARCHITECTURE.md  GETTING_STARTED.md  PORTING_GUIDE.md
examples/: 01_beginner_tutorial.cpp  02_smart_factory_example.cpp  03_autonomous_vehicle_example.cpp  04_medical_device_example.cpp  05_drone_control_example.cpp  06_advanced_macros_example.cpp  CMakeLists.txt  README.md  macro_demo_example.cpp  phase3_final_example.cpp  safety_migration_example.cpp  simple_iot_example.cpp
include/mini_sobjectizer/: README.md  config.h  mini_sobjectizer.h  platform.h  types.h
include/mini_sobjectizer/agent/: agent_base.h
include/mini_sobjectizer/archive/: README.md  message_safety_patch.h  mini_so_agent.h  mini_so_config.h  mini_so_environment.h  mini_so_message.h  mini_so_queue.h  mini_so_system_messages.h  mini_so_types.h  mini_sobjectizer.h  safe_message_design.h  safe_message_queue.h
include/mini_sobjectizer/macros/: agent_macros.h  message_macros.h
include/mini_sobjectizer/message/: message_base.h  message_types.h
include/mini_sobjectizer/queue/: message_queue.h
include/mini_sobjectizer/system/: emergency.h  environment.h
lib/freertos_minimal/: HEAP_SELECTION.md  README.md
lib/freertos_minimal/include/: FreeRTOSConfig.h
lib/freertos_minimal/portable/: README.md
lib/freertos_minimal/portable/ARM_CM4F/: port.c  portmacro.h
src/: freertos_mock.cpp  main.cpp  mini_sobjectizer.cpp
src/archive/: main_test.cpp  mini_sobjectizer_modular.cpp  mini_sobjectizer_safe_patch.cpp
test/: CMakeLists.txt  test_agent.cpp  test_environment.cpp  test_message_queue.cpp
test/development_tests/: README.md
test/production_ready_tests/: README.md
